# Dio_Bootcamp_Accenture_2026

./: README.MD
Desafio_acelere_aprendizagem_com_NotebookLM/: README.md
Desafios_codigo/: desafio_poo.ipynb
Exercicios_Pratica/: PNL_na_pratica.ipynb  desafio_decisoes_repeticoes.ipynb  desafio_funcoes.ipynb  introducao_poo.py  polimorfismo_poo_ex2.py
Exercicios_Pratica/POO_Python_Exercicios/: classe_abstrata_poo.py  encapsulamento_poo.py  exercicio_heranca_poo.py  heranca_multipla_poo.py  metodo_classe_estatico_poo.py  polimorfismo_herança_poo.py  polimorfismo_poo_ex1.py  propriedades_exemploFoo.py  propriedades_exemplo_pessoa.py  variaveis_classe_instancia_poo.py
Projeto_Deteccao_Fraudes/: .gitignore  README.md  deteccao_fraudes.ipynb  main.py  pyproject.toml
Projeto_Final_Assistente_Financeiro_Virtual/: README.MD
Projeto_Final_Assistente_Financeiro_Virtual/data/: perfil_investidor.json  produtos_financeiros.json  transacoes.csv
Projeto_Final_Assistente_Financeiro_Virtual/docs/: 01_documentacao_agente.md  02_bases_de_conhecimento.md  03_prompts.md  04_metricas.md
Projeto_Final_Assistente_Financeiro_Virtual/src/: app.py  guardrails_custom.py
