[project]
name = "projeto-deteccao-fraudes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dtreeviz>=2.3.2",
    "graphviz>=0.21",
    "imbalanced-learn>=0.14.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]
